# emotion_detection

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
models/: .gitignore
models/history/: metrics_20240830-1156.json  metrics_20240830-1158.json  metrics_20240830-1200.json  metrics_20240830-1535.json  metrics_20240830-1546.json  metrics_20240830-1553.json  metrics_20240830-1600.json  metrics_20240830-1603.json  metrics_20240830-1626.json  metrics_20240830-1627.json  metrics_20240830-1629.json  metrics_20240830-1630.json  metrics_20240830-1649.json  metrics_20240830-1655.json  metrics_20240830-1656.json  model_20240830-113936.pkl  model_20240830-1148.pkl  model_20240830-1151.pkl  model_20240830-1156.pkl  model_20240830-1158.pkl  model_20240830-1200.pkl  model_20240830-1535.pkl  model_20240830-1546.pkl  model_20240830-1553.pkl  model_20240830-1559.pkl  model_20240830-1603.pkl  model_20240830-1625.pkl  model_20240830-1627.pkl  model_20240830-1629.pkl  model_20240830-1630.pkl  model_20240830-1649.pkl  model_20240830-1655.pkl  model_20240830-1656.pkl
sentiment_analysis/: data_ingestion.py  data_preprocessing.py  exception.py  feature_engineering.py  logger.py  main.py  model_building.py  model_evaluation.py
