[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentiment_analysis"
version = "0.0.1"
description = "sentiment_analysis a machine learning project with DVC pipleine"
authors = [
  { name = "saptarshi sanyal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["sentiment_analysis"]
force_sort_within_sections = true
